Creating new endpoint to retrieve previous hotel searches
